// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputCounter should render 1`] = `
<DocumentFragment>
  <div
    class="css-1psxlcd"
  >
    <div
      class="relative flex h-full flex-1"
    >
      <input
        autocomplete="off"
        class="no-ligatures w-full border-none css-1nupw50"
        data-testid="InputCounter__input"
        maxlength="10"
        type="text"
        value=""
      />
    </div>
    <div
      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
      data-testid="Input__addon-end"
    >
      <div
        class=""
      >
        <span
          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
          data-testid="InputCounter__counter"
        >
          0/10
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputCounter should render with invalid state 1`] = `
<div>
  <div
    class="css-px3dod"
  >
    <div
      class="relative flex h-full flex-1"
    >
      <input
        aria-invalid="true"
        autocomplete="off"
        class="no-ligatures w-full border-none css-1nupw50"
        data-testid="InputCounter__input"
        maxlength="10"
        name="vendorField"
        type="text"
        value=""
      />
    </div>
    <div
      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
      data-testid="Input__addon-end"
    >
      <span
        data-testid="Input__error"
      >
        <div
          class="text-theme-danger-500 css-1i4b0eq"
          height="20"
          width="20"
        >
          <svg>
            circle-exclamation-mark.svg
          </svg>
        </div>
      </span>
      <div
        class="pl-3"
      >
        <span
          class="text-sm font-semibold"
          data-testid="InputCounter__counter"
        >
          0
          /
          10
        </span>
      </div>
    </div>
  </div>
</div>
`;
